Migrate to kotlin native
Note that this temporarily disables cross-compilation. There's still a
lot of work to do to make that work and the only thing it's blocking is
being able to publish binaries. This currently isn't working because
dynamic linking is broken so this is not really a regression.